# ecs

./: .gitignore  CMakeLists.txt  README.md
ECS/: .cproject  .gitignore  .project
ECS/include/: ECS.h
ECS/include/ECS/: CommonDefs.h  Component.h  Components.h  ComponentsMaskCreator.h  ComponentsPool.h  ComponentsRegister.h  ECSManager.h  Entities.h  EntitiesPool.h  Entity.h  EntityManager.h  MaskCreators.h  System.h  SystemIterator.h  Systems.h  UpdateIterator.h
ECS/src/: Components.cpp  Entity.cpp  EntityManager.cpp  SystemIterator.cpp  Systems.cpp  UpdateIterator.cpp
ECS/src/Test/: main.cpp
build-ecs_test-Desktop_Qt_5_3_0_MSVC2013_OpenGL_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-ecs_test-Desktop_Qt_5_3_0_MSVC2013_OpenGL_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release
include/: ECS.h
include/ECS/: CommonDefs.h  Component.h  Components.h  ComponentsRegister.h  DynamicComponentsPool.h  ECSManager.h  EcsConfig.h  Entities.h  EntitiesPool.h  EntitiesRegister.h  Entity.h  EntityHeaderComponent.h  EntityType.h  EntityTypeHeaderComponent.h  EntityTypePool.h  InternalComponents.h  Masks.h  Offsets.h  StaticComponentsPool.h  System.h  Systems.h  TypeIdMask.h  TypeInfo.h.autosave  TypeTuple.h  UpdateIterator.h
proj/: ecs_test.pro
src/ecsTest/: CMakeLists.txt  main.cpp
test/: main.cpp
